codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 291
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:
  Resuming session…

› draft while loading


after:


› draft while loading


---
fork lookup fallback:
before:
  Forking session…

› draft while loading


after:


› draft while loading


---
resume picker cancellation:
before:
hidden while picker owns input
after:


› Ask Codex to do anything

  ? for shortcuts
---
fork picker cancellation:
before:
hidden while picker owns input
after:


› Ask Codex to do anything

  ? for shortcuts
