codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_onboarding_transition.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 805
expression: frames
---
before onboarding: hidden (0x0 viewport)
---
after onboarding:


› Ask Codex to do anything

  ? for shortcuts
